    * 3580 The macro $HOSTNAME$ is now available for host checks which are based on service states
    * 3155 implemented dual monitoring for systems with management boards (like HP iLO)
    * 3721 Host macros are now replaced in datasource program command lines...
    * 3853 cmk --list-tag can now also list offline hosts
    * 3193 FIX: Fixed fake check results for hosts...
    * 3214 FIX: Removing SNMP checks for non SNMP hosts and agent based checks for non agent hosts...
    * 3220 FIX: Check_MK HW/SW Inventory is now always disabled for "No Agent" hosts
    * 3221 FIX: Fixed broken nagios config because of missing contact group check-mk-notify with rule based notifications enabled...
    * 3234 FIX: Make unixcat more robust...
    * 3275 FIX: Piggyback based services were skipped on "No agent hosts"...
    * 3286 FIX: Fixing possible logging issues when using datasource programs for monitoring...
    * 3008 FIX: Fixed exception in logwatch config generation when using Nagios...
    * 3105 FIX: fixed crash in cmk --dump for services containing non-ascii characters
    * 3343 FIX: MKP: Verifying minimal version of packages during installation...
    * 3349 FIX: Added rule to disable Inline-SNMP per host...
    * 3123 FIX: fix for temperature services discovered pre-1.2.8 that caused errors on writing configuration
    * 3385 FIX: Fixed not updated discovery service after grouped auto discovery...
    * 3416 FIX: Avoid warning in cmc.log when rescheduling non-existing discovery check...
    * 3437 FIX: Improved performance of "activate changes", especially in distributed environments
    * 3471 FIX: Repair ignoring discovery errors when bogus %s is contained in service description...
    * 3616 FIX: Fix cmk -I ignoring the option --cache...
    * 3617 FIX: cmk -I without host specification now (again) always uses cache files...
    * 3149 FIX: fixed rare crash if alert handling tried to long non-latin characters